--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1> I am Kenny McClure and this is my ITIS3135 First Course Page</h1>
+<h1> I am Kenny McClure and this is my home Page</h1>
 <a href = "itis3135/">Click to go to the ITIS3135 Site</a>
