--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,10 @@
-<h1> I am Kenny McClure and this is my ITIS3135 First Course Page</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <h1> I am Kenny McClure and this is my ITIS3135 First Course Page</h1>
+
+    </head>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+</html>
+
+
