--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<h1> I am Kenny McClure and this is my home Page</h1>
-<a href = "itis3135/">Click to go to the ITIS3135 Site</a>
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <h1> I am Kenny McClure and this is my home Page</h1>
+        <a href = "itis3135/">Click to go to the ITIS3135 Site</a>
+    </head>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+</html>
