fixed accumulus erros

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <title>Kmcclu14_homepage</title>
         <h1> I am Kenny McClure and this is my home Page</h1>
         <a href = "itis3135/">Click to go to the ITIS3135 Site</a>
     </head>
