--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <title>Kmcclu14_itis3135</title>
         <h1> I am Kenny McClure and this is my ITIS3135 First Course Page</h1>
 
     </head>
