--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Kenton McClure's Kind Mouse || ITIS3135 || Home page</title>
+    <title>"Kenton McClure's Kind Mouse || ITIS3135 || Contract</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
@@ -23,8 +23,13 @@
         
     </header>
     <main>
-        <h2>ITIS 3135 Home</h2>
-        <p>This is all the content for my ITIS 3135 class</p>
+        <h2>ITIS 3135 Contract</h2>
+        <p>This is the contract for my ITIS 3135 class</p>
+        <p> I, Kenton McClure agree to abide by the terms in my Sophomore 2025 202510 52/91 ITIS3135 with my instructor, D.I von Briesen.
+            I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
+            Signed:
+                  Kenton McClure, 03 Febuary 2025
+            </p>
     </main>
     <footer>
         
