--- a/Kenton-McClure.github.io-main/Kenton-McClure.github.io-main/itis3135/index.html
+++ b/Kenton-McClure.github.io-main/Kenton-McClure.github.io-main/itis3135/index.html
@@ -41,6 +41,8 @@
         <a href="codeacademy.com/profiles/kmcclu14">codeacademy profile</a>
         ||
         <a href="www.linkedin.com/in/kentonmcclure">linkedin</a>
+        ||
+        <a href="Whimsical_company/about.html">Whimsical_company</a>
         
         
         <p>designed by KentEnto©2025</p>
