--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             text-decoration: none;
         }
     </style>
+
 </head>
 <body>
     <header>
@@ -27,6 +28,9 @@
             <a href="itis3135/">ITIS3135 Page</a>
 
 
+        </nav>
+        <nav>
+            <a href="itis3135/fartpoop/POOOOOOO ;)PY.htm">crappy website</a>
         </nav>
         
     </header>
