--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -20,6 +20,10 @@
             <a href="contract.html">Contract</a>
 
         </nav>
+        ||
+        <nav>
+            <a href="fartpoop/POOOOOOO ;)PY.htm">crappy</a>
+        </nav>
         
     </header>
     <main>
