--- a/itis3135/Whimsical_company/indexWhim.html
+++ b/itis3135/Whimsical_company/indexWhim.html
@@ -3,18 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Kind Mouse ||  Home page</title>
+    <title>"Kind Mouse ||  Whimsical Company</title>
     <link rel="stylesheet" href="../styles/Whim.css">
 </head>
 <body>
     <header>
-        <h1>Kind Mouse Candy Store</h1>
-        <h2><em>Taste From Across The World!</em> </h2>
-        <nav>
-            <a href="indexWhim.html">Home</a>
-            ||
-            <a href="about.html">About Us</a>
-        </nav>
+        <div data-include="/itis3135/components/header.html"></div>
     </header>
     <main>
         <h2>Kind Mouse Candy || Home</h2>
@@ -77,29 +71,12 @@
         </div>
     </main>
     <footer>
-        <a href="webpages.charlotte.edu/kmcclu14/">Charlotte Home page</a>
-        ||
-        <a href="github.com/Kmcclu14/">Github page</a>
-        ||
-        <a href="Kenton-mcclure.github.io">Github.io</a>
-        ||
-        <a href="kenton-mcclure.github.io/itis3135/">ITIS3135.io</a>
-        ||
-        <a href="freecodecamp.org/kmcclu14">FCC profile</a>
-        ||
-        <a href="codeacademy.com/profiles/kmcclu14">codeacademy profile</a>
-        ||
-        <a href="www.linkedin.com/in/kentonmcclure">linkedin</a>
-        ||
-        <a href="https://www.candycopia.com/collections/international-candy?srsltid=AfmBOoq1wpw8BecpkdO1sJkF2Af8TON5hbjdyk-2p2XqregCwglcVe9p">Visit out partner site</a>
-        <p>designed by KentEnto©2025</p>
-        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-            <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-        </a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-        </a>
-        <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+        <div data-include="/itis3135/components/footer.html"></div>
     </footer>
+    <script>
+        document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
+            document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+    </script>
+    <script src="/itis3135/scripts/html.include.min.js"></script>
 </body>
 </html>
