--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -30,7 +30,7 @@
         document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
             document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
     </script>
-    <script src="/itis3135/scripts/html.include.min.js"></script>
+    <script src="scripts/HTMLInclude.js"></script>
     
 </body>
 </html>
